@startuml BDD - Conceptual model
title BDD - Conceptual model
!theme plain
hide circle
skinparam linetype ortho

entity item{
    <u>id</u>
    --
    name
    price_ex_vat
    vat_percentage
    left_in_stock
    description
    imageURL
}
entity category{
    <u>name</u>
    --
    description
}
entity referent{
    <u>id</u>
    --
    designation
    first_name
    last_name
    birth_date
    isAlive
    nickname[0..1]
    website [0..1]
}
entity school_of_thought{
    <u>id</u>
    --
    name
    description
}
entity order{
    <u>id</u>
    --
    creation_time
}
entity client{
    <u>id</u>
    --
    first_name
    last_name
}
entity order_line{
    --
    quantity
    price_at_the_time
}
note top of order_line : id(order_line) : id(order), id(item)
entity coupon{
    <u>code</u>
    --
    discount_percentage
}
entity employee {
    <u>id</u>
    --
    first_name
    last_name
    hiring_date
    salary
}
entity country{
    <u>name</u>
    --
    is_supported
}
entity locality{
    <u>id</u>
    --
    name 
    zip_code 
    is_supported
}
entity delivery_address{
    <u>id</u>
    --
    is_pickup_point
    num_in_street
    street_name
    box [0..1]
}

note top of delivery_address : Is only created when selected,\n except for pickup points

' Relations
order ||--o{ order_line
order_line }o--|| item
order }o--o{ coupon : Reductions
order }o--|| employee : Encoding
locality ||--o{ delivery_address
country ||--o{ locality
referent }o--o| school_of_thought
referent }o--o{ item
item }o--|| category
client }o--|| delivery_address
client ||--o{ order : Shipping

@enduml